Создано с помощью Colaboratory

--- a/Credit.ipynb
+++ b/Credit.ipynb
@@ -30,7 +30,8 @@
         "\n",
         "ML-задача: анализируя различные характеристики клиентов банка, а именно - возраст, работа, семейное положение и так далее, построим модель что будет предсказывать какие люди будут брать депозит - строка y. Думаю, что это задача регрессии.\n",
         "\n",
-        "Нашими метриками будут: MSE, RMSE\n"
+        "Нашими метриками будут: MSE, RMSE\n",
+        "Будем использовать именно эти метрики, так как они показывают точность предсказания модели и велечину отклонение от реальных значений.\n"
       ]
     },
     {
@@ -304,7 +305,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 424
+          "height": 444
         },
         "id": "oAMgCzlC6K0Z",
         "outputId": "c671f41f-b92c-431f-f1c6-23f5261fca27"
@@ -1348,7 +1349,7 @@
         "id": "r4ydL-UrKu3d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 144
+          "height": 164
         },
         "outputId": "14583144-f01d-432e-a350-1a7582efe2a2"
       },
@@ -1681,7 +1682,7 @@
         "id": "ufFqBUcvNDfK",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 144
+          "height": 164
         },
         "outputId": "66aa89dd-e172-4d72-e506-13616e9bab77"
       },
@@ -2014,7 +2015,7 @@
         "id": "SYo1Cs__NI6b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 226
         },
         "outputId": "3f1c9771-78a7-40ac-e455-8d72568006b3"
       },
@@ -2385,7 +2386,7 @@
         "id": "ozxkJgWaMy26",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 457
+          "height": 495
         },
         "outputId": "833900a8-e360-467a-b7d9-a7666ad4a067"
       },
@@ -3254,7 +3255,7 @@
         "id": "HgFMt2LYfutM",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 245
+          "height": 282
         },
         "outputId": "650e97c7-ba0a-415d-d53c-4b7d8f942c4c"
       },
@@ -3487,7 +3488,7 @@
         "id": "x_83-eBL3wYy",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 578
+          "height": 546
         },
         "outputId": "bc027701-e8c5-4f88-8fb1-a71cce71a214"
       },
@@ -3516,6 +3517,15 @@
       "source": [
         "sns.heatmap(df.corr(), cmap=\"RdYlBu_r\")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Наверное надо было убрать столбцы без разбиения, что были в изначальном датасете, так как они несут одинаковую информацию с новыми."
+      ],
+      "metadata": {
+        "id": "_aG-4jg37a74"
+      }
     },
     {
       "cell_type": "code",
@@ -3573,7 +3583,7 @@
         "id": "xqJyAn9B7zqG",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 227
+          "height": 245
         },
         "outputId": "db5b89ab-c55a-44a3-b296-2a9771a800cd"
       },
