--- a/credit_2.ipynb
+++ b/credit_2.ipynb
@@ -2463,6 +2463,60 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "gP2jIlC6B_Mj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.pipeline import Pipeline\n",
+        "from sklearn.model_selection import GridSearchCV"
+      ],
+      "metadata": {
+        "id": "ttTtr_YMBVgs"
+      },
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Масштабирование параметров"
+      ],
+      "metadata": {
+        "id": "Ci9tXezVCNts"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pipeline = Pipeline([\n",
+        "    (\"scaler\", StandardScaler()),\n",
+        "    (\"clf\", LogisticRegression())\n",
+        "])"
+      ],
+      "metadata": {
+        "id": "jd2Sv_skAsFk"
+      },
+      "execution_count": 53,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = pipeline.fit(X_train, y_train)\n",
+        "y_pred_simple = model.predict(X_test)"
+      ],
+      "metadata": {
+        "id": "lDmhiD0sBHSL"
+      },
+      "execution_count": 54,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [
         "print(classification_report(y_test, y_pred_log_reg))"
@@ -2472,9 +2526,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xYD54Op8hwr5",
-        "outputId": "3ef1dcf4-2708-4343-f388-3489ea83831a"
+        "outputId": "e2c82950-3738-46a0-d382-7983a293449d"
       },
-      "execution_count": 46,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
@@ -2522,9 +2576,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TFiTf2sw89iE",
-        "outputId": "e616743e-0a85-4118-c775-a536befcf4b5"
+        "outputId": "64245241-e725-43e4-c87b-d52e512df11d"
       },
-      "execution_count": 42,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "stream",
@@ -2547,9 +2601,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7tQZDBfe9UEN",
-        "outputId": "f94fa36f-b022-4792-c97e-f57e4e2584d7"
+        "outputId": "01572cff-3753-4a2d-d6c7-dfb104538073"
       },
-      "execution_count": 43,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "stream",
